feat: verify data for login